--- a/tinyowl/test-output/old/tinyOwlLocationTests/methods-alphabetical.html
+++ b/tinyowl/test-output/old/tinyOwlLocationTests/methods-alphabetical.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>tinyOwlLocationTests</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="febc6f">  <td>15/03/29 18:55:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchLocationManuallyGPSEnabledTest.EnterLocationManuallyGPSEnabledTestCase(java.lang.String)[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest@1bc7afb]">EnterLocationManuallyGPSEnabledTestCase</td> 
-  <td>main@26955023</td>   <td></td> </tr>
-<tr bgcolor="bfc7f7">  <td>15/03/29 18:56:31</td>   <td>71425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchLocationManuallyGPSDisabledTest.SearchLocationManuallyGPSDisabledTestCase(java.lang.String)[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest@1684286]">SearchLocationManuallyGPSDisabledTestCase</td> 
-  <td>main@26955023</td>   <td></td> </tr>
-<tr bgcolor="febc6f">  <td>15/03/29 18:54:46</td>   <td>-32881</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchLocationManuallyGPSEnabledTest.checkGPS()[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest@1bc7afb]">&gt;&gt;checkGPS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26955023</td>   <td></td> </tr>
-<tr bgcolor="bfc7f7">  <td>15/03/29 18:55:59</td>   <td>39918</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchLocationManuallyGPSDisabledTest.checkGPS()[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest@1684286]">&gt;&gt;checkGPS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26955023</td>   <td></td> </tr>
-<tr bgcolor="79e8cb">  <td>15/03/29 18:55:57</td>   <td>37885</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest@1bc7afb]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26955023</td>   <td></td> </tr>
-<tr bgcolor="79e8cb">  <td>15/03/29 19:00:20</td>   <td>300404</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest@1684286]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@26955023</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>15/03/30 00:51:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CurrentLocationGPSEnabledTest.checkGPS()[pri:0, instance:com.flutterbee.tinyowl.CurrentLocationGPSEnabledTest@1bb089b]">&gt;&gt;checkGPS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22319259</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>15/03/30 00:51:35</td>   <td>33064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CurrentLocationGPSEnabledTest.currentLocationGPSEnabledTestCase()[pri:0, instance:com.flutterbee.tinyowl.CurrentLocationGPSEnabledTest@1bb089b]">currentLocationGPSEnabledTestCase</td> 
+  <td>main@22319259</td>   <td></td> </tr>
 </table>
