--- a/tinyowl/test-output/old/tinyOwlLocationTests/toc.html
+++ b/tinyowl/test-output/old/tinyOwlLocationTests/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>tinyOwlLocationTests</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>2 tests</td>
-<td><a target='mainFrame' href='classes.html'>2 classes</a></td>
-<td>2 methods:<br/>
+<td>1 test</td>
+<td><a target='mainFrame' href='classes.html'>1 class</a></td>
+<td>1 method:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -20,18 +20,10 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>TC_03 (0/1/0)</td><td valign='top' align='right'>
-  <a href='TC_03.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>TC_04 (1/0/0)</td><td valign='top' align='right'>
-  <a href='TC_04.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>TC_01 - Current Location when GPS is enabled (0/0/1)</td><td valign='top' align='right'>
+  <a href='TC_01 - Current Location when GPS is enabled.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
