--- a/tinyowl/test-output/index.html
+++ b/tinyowl/test-output/index.html
@@ -53,7 +53,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-tinyOwlLocationTests">
-                    <span class="test-stats">1 test</span>
+                    <span class="test-stats">5 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,  1 skipped,  </span>
+                    <span class="method-stats">5 methods,  5 skipped,  </span>
                   </li>
                   <li>
                     <span class="method-list-title skipped">Skipped methods</span>
@@ -101,7 +101,27 @@
                     <div class="method-list-content skipped suite-tinyOwlLocationTests">
                       <span>
                         <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-tinyOwlLocationTests" title="com.flutterbee.tinyowl.CurrentLocationGPSDisabledTest" hash-for-method="currentLocationGPSDisabledTestCase">currentLocationGPSDisabledTestCase</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="skipped.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-tinyOwlLocationTests" title="com.flutterbee.tinyowl.CurrentLocationGPSEnabledTest" hash-for-method="currentLocationGPSEnabledTestCase">currentLocationGPSEnabledTestCase</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-tinyOwlLocationTests" title="com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest" hash-for-method="searchLocationManuallyGPSDisabledTestCase(Elphinstone)">searchLocationManuallyGPSDisabledTestCase(Elphinstone)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-tinyOwlLocationTests" title="com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest" hash-for-method="searchLocationManuallyGPSEnabledTestCase(Dadar)">searchLocationManuallyGPSEnabledTestCase(Dadar)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-tinyOwlLocationTests" title="com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest" hash-for-method="searchLocationManuallyGPSEnabledTestCase(Virar)">searchLocationManuallyGPSEnabledTestCase(Virar)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content skipped suite-tinyOwlLocationTests -->
@@ -131,6 +151,61 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-tinyOwlLocationTests-class-skipped -->
+          <div class="suite-tinyOwlLocationTests-class-skipped">
+            <div class="main-panel-header rounded-window-top">
+              <img src="skipped.png"/>
+              <span class="class-name">com.flutterbee.tinyowl.CurrentLocationGPSDisabledTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="currentLocationGPSDisabledTestCase">
+                  </a> <!-- currentLocationGPSDisabledTestCase -->
+                  <span class="method-name">currentLocationGPSDisabledTestCase</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-tinyOwlLocationTests-class-skipped -->
+          <div class="suite-tinyOwlLocationTests-class-skipped">
+            <div class="main-panel-header rounded-window-top">
+              <img src="skipped.png"/>
+              <span class="class-name">com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchLocationManuallyGPSDisabledTestCase(Elphinstone)">
+                  </a> <!-- searchLocationManuallyGPSDisabledTestCase(Elphinstone) -->
+                  <span class="method-name">searchLocationManuallyGPSDisabledTestCase</span>
+                  <span class="parameters">(Elphinstone)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-tinyOwlLocationTests-class-skipped -->
+          <div class="suite-tinyOwlLocationTests-class-skipped">
+            <div class="main-panel-header rounded-window-top">
+              <img src="skipped.png"/>
+              <span class="class-name">com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchLocationManuallyGPSEnabledTestCase(Dadar)">
+                  </a> <!-- searchLocationManuallyGPSEnabledTestCase(Dadar) -->
+                  <span class="method-name">searchLocationManuallyGPSEnabledTestCase</span>
+                  <span class="parameters">(Dadar)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchLocationManuallyGPSEnabledTestCase(Virar)">
+                  </a> <!-- searchLocationManuallyGPSEnabledTestCase(Virar) -->
+                  <span class="method-name">searchLocationManuallyGPSEnabledTestCase</span>
+                  <span class="parameters">(Virar)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-tinyOwlLocationTests-class-skipped -->
         </div> <!-- panel tinyOwlLocationTests -->
         <div panel-name="test-xml-tinyOwlLocationTests" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -150,6 +225,45 @@
       &lt;/class&gt; &lt;!-- com.flutterbee.tinyowl.CurrentLocationGPSEnabledTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- TC_01 - Current Location when GPS is enabled --&gt;
+  &lt;test name=&quot;TC_02 - Current Location when GPS is initially disabled&quot;&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;com.flutterbee.tinyowl.CurrentLocationGPSDisabledTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;currentLocationGPSDisabledTestCase&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- com.flutterbee.tinyowl.CurrentLocationGPSDisabledTest --&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- TC_02 - Current Location when GPS is initially disabled --&gt;
+  &lt;test name=&quot;TC_03 - Search a valid(in scope) Location manually when GPS is enabled&quot;&gt;
+    &lt;parameter name=&quot;location&quot; value=&quot;Dadar&quot;/&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;searchLocationManuallyGPSEnabledTestCase&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest --&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- TC_03 - Search a valid(in scope) Location manually when GPS is enabled --&gt;
+  &lt;test name=&quot;TC_04 - Search an invalid(out of scope) Location manually when GPS is enabled&quot;&gt;
+    &lt;parameter name=&quot;location&quot; value=&quot;Virar&quot;/&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;searchLocationManuallyGPSEnabledTestCase&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest --&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- TC_04 - Search an invalid(out of scope) Location manually when GPS is enabled --&gt;
+  &lt;test name=&quot;TC_05 - Search a valid(in scope) Location manually when GPS is initially disabled&quot;&gt;
+    &lt;parameter name=&quot;location&quot; value=&quot;Elphinstone&quot;/&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;searchLocationManuallyGPSDisabledTestCase&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest --&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- TC_05 - Search a valid(in scope) Location manually when GPS is initially disabled --&gt;
 &lt;/suite&gt; &lt;!-- tinyOwlLocationTests --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -162,6 +276,18 @@
             <ul>
               <li>
                 <span class="test-name">TC_01 - Current Location when GPS is enabled (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">TC_02 - Current Location when GPS is initially disabled (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">TC_03 - Search a valid(in scope) Location manually when GPS is enabled (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">TC_04 - Search an invalid(out of scope) Location manually when GPS is enabled (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">TC_05 - Search a valid(in scope) Location manually when GPS is initially disabled (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,16 +313,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'currentLocationGPSEnabledTestCase')
-data.setCell(0, 2, 'com.flutterbee.tinyowl.CurrentLocationGPSEnabledTest')
+data.setCell(0, 1, 'currentLocationGPSDisabledTestCase')
+data.setCell(0, 2, 'com.flutterbee.tinyowl.CurrentLocationGPSDisabledTest')
 data.setCell(0, 3, 1);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'searchLocationManuallyGPSEnabledTestCase')
+data.setCell(1, 2, 'com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest')
+data.setCell(1, 3, 1);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'searchLocationManuallyGPSEnabledTestCase')
+data.setCell(2, 2, 'com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest')
+data.setCell(2, 3, 1);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'searchLocationManuallyGPSDisabledTestCase')
+data.setCell(3, 2, 'com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest')
+data.setCell(3, 3, 1);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'currentLocationGPSEnabledTestCase')
+data.setCell(4, 2, 'com.flutterbee.tinyowl.CurrentLocationGPSEnabledTest')
+data.setCell(4, 3, 0);
 window.suiteTableData['tinyOwlLocationTests']= { tableData: data, tableDiv: 'times-div-tinyOwlLocationTests'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 ms</span>
+              <span class="suite-total-time">Total running time: 4 ms</span>
               <div id="times-div-tinyOwlLocationTests">
               </div> <!-- times-div-tinyOwlLocationTests -->
             </div> <!-- times-div -->
@@ -231,7 +373,56 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">currentLocationGPSEnabledTestCase</span>
-                <span class="method-start">33067 ms</span>
+                <span class="method-start">1643 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.flutterbee.tinyowl.CurrentLocationGPSDisabledTest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">checkGPS</span>
+                <span class="method-start">1707 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">currentLocationGPSDisabledTestCase</span>
+                <span class="method-start">2718 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">checkGPS</span>
+                <span class="method-start">2778 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">searchLocationManuallyGPSEnabledTestCase(Dadar)</span>
+                <span class="method-start">3806 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class before">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">checkGPS</span>
+                <span class="method-start">3871 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">searchLocationManuallyGPSEnabledTestCase(Virar)</span>
+                <span class="method-start">4891 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">checkGPS</span>
+                <span class="method-start">4953 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">searchLocationManuallyGPSDisabledTestCase(Elphinstone)</span>
+                <span class="method-start">5967 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
