--- a/tinyowl/test-output/old/tinyOwlLocationTests/methods-alphabetical.html
+++ b/tinyowl/test-output/old/tinyOwlLocationTests/methods-alphabetical.html
@@ -1,8 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>tinyOwlLocationTests</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d3a17d">  <td>15/03/30 00:51:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CurrentLocationGPSEnabledTest.checkGPS()[pri:0, instance:com.flutterbee.tinyowl.CurrentLocationGPSEnabledTest@1bb089b]">&gt;&gt;checkGPS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22319259</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>15/03/30 00:51:35</td>   <td>33064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CurrentLocationGPSEnabledTest.currentLocationGPSEnabledTestCase()[pri:0, instance:com.flutterbee.tinyowl.CurrentLocationGPSEnabledTest@1bb089b]">currentLocationGPSEnabledTestCase</td> 
-  <td>main@22319259</td>   <td></td> </tr>
+<tr bgcolor="febc6f">  <td>15/03/30 02:24:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CurrentLocationGPSEnabledTest.checkGPS()[pri:0, instance:com.flutterbee.tinyowl.CurrentLocationGPSEnabledTest@1531931]">&gt;&gt;checkGPS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16365756</td>   <td></td> </tr>
+<tr bgcolor="c3fd8b">  <td>15/03/30 02:24:12</td>   <td>1704</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CurrentLocationGPSDisabledTest.checkGPS()[pri:0, instance:com.flutterbee.tinyowl.CurrentLocationGPSDisabledTest@8dacdf]">&gt;&gt;checkGPS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16365756</td>   <td></td> </tr>
+<tr bgcolor="63a2ba">  <td>15/03/30 02:24:13</td>   <td>2775</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchLocationManuallyGPSEnabledTest.checkGPS()[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest@f438e]">&gt;&gt;checkGPS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16365756</td>   <td></td> </tr>
+<tr bgcolor="63a2ba">  <td>15/03/30 02:24:14</td>   <td>3868</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchLocationManuallyGPSEnabledTest.checkGPS()[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest@1a6e353]">&gt;&gt;checkGPS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16365756</td>   <td></td> </tr>
+<tr bgcolor="72cbfa">  <td>15/03/30 02:24:15</td>   <td>4950</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchLocationManuallyGPSDisabledTest.checkGPS()[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest@6e6d5e]">&gt;&gt;checkGPS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16365756</td>   <td></td> </tr>
+<tr bgcolor="c3fd8b">  <td>15/03/30 02:24:13</td>   <td>2715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CurrentLocationGPSDisabledTest.currentLocationGPSDisabledTestCase()[pri:0, instance:com.flutterbee.tinyowl.CurrentLocationGPSDisabledTest@8dacdf]">currentLocationGPSDisabledTestCase</td> 
+  <td>main@16365756</td>   <td></td> </tr>
+<tr bgcolor="febc6f">  <td>15/03/30 02:24:12</td>   <td>1640</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CurrentLocationGPSEnabledTest.currentLocationGPSEnabledTestCase()[pri:0, instance:com.flutterbee.tinyowl.CurrentLocationGPSEnabledTest@1531931]">currentLocationGPSEnabledTestCase</td> 
+  <td>main@16365756</td>   <td></td> </tr>
+<tr bgcolor="72cbfa">  <td>15/03/30 02:24:16</td>   <td>5964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchLocationManuallyGPSDisabledTest.searchLocationManuallyGPSDisabledTestCase(java.lang.String)[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSDisabledTest@6e6d5e]">searchLocationManuallyGPSDisabledTestCase</td> 
+  <td>main@16365756</td>   <td></td> </tr>
+<tr bgcolor="63a2ba">  <td>15/03/30 02:24:14</td>   <td>3803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchLocationManuallyGPSEnabledTest.searchLocationManuallyGPSEnabledTestCase(java.lang.String)[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest@f438e]">searchLocationManuallyGPSEnabledTestCase</td> 
+  <td>main@16365756</td>   <td></td> </tr>
+<tr bgcolor="63a2ba">  <td>15/03/30 02:24:15</td>   <td>4888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchLocationManuallyGPSEnabledTest.searchLocationManuallyGPSEnabledTestCase(java.lang.String)[pri:0, instance:com.flutterbee.tinyowl.SearchLocationManuallyGPSEnabledTest@1a6e353]">searchLocationManuallyGPSEnabledTestCase</td> 
+  <td>main@16365756</td>   <td></td> </tr>
 </table>
