--- a/tinyowl/test-output/old/tinyOwlLocationTests/toc.html
+++ b/tinyowl/test-output/old/tinyOwlLocationTests/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>tinyOwlLocationTests</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>1 test</td>
-<td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>1 method:<br/>
+<td>5 tests</td>
+<td><a target='mainFrame' href='classes.html'>4 classes</a></td>
+<td>5 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -24,6 +24,38 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>TC_01 - Current Location when GPS is enabled (0/0/1)</td><td valign='top' align='right'>
   <a href='TC_01 - Current Location when GPS is enabled.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-skipped'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TC_02 - Current Location when GPS is initially disabled (0/0/1)</td><td valign='top' align='right'>
+  <a href='TC_02 - Current Location when GPS is initially disabled.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-skipped'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TC_03 - Search a valid(in scope) Location manually when GPS is enabled (0/0/1)</td><td valign='top' align='right'>
+  <a href='TC_03 - Search a valid(in scope) Location manually when GPS is enabled.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-skipped'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TC_04 - Search an invalid(out of scope) Location manually when GPS is enabled (0/0/1)</td><td valign='top' align='right'>
+  <a href='TC_04 - Search an invalid(out of scope) Location manually when GPS is enabled.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-skipped'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TC_05 - Search a valid(in scope) Location manually when GPS is initially disabled (0/0/1)</td><td valign='top' align='right'>
+  <a href='TC_05 - Search a valid(in scope) Location manually when GPS is initially disabled.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
