--- a/tinyowl/test-output/old/tinyOwlLocationTests/reporter-output.html
+++ b/tinyowl/test-output/old/tinyOwlLocationTests/reporter-output.html
@@ -1,1 +1,247 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>
+Executing - CurrentLocationGPSEnabledTest</td></tr>
+<tr><td>Following are the Restaurants in Elphinstone Flyover, Saidham Nagar, Lower Parel - </td></tr>
+<tr><td>Box8</td></tr>
+<tr><td>Malvani Katta</td></tr>
+<tr><td>Tibb's Frankie</td></tr>
+<tr><td>Modern Bar & Restaurant</td></tr>
+<tr><td>Smokin' Joe's</td></tr>
+<tr><td>Amazing China</td></tr>
+<tr><td>Hangla's</td></tr>
+<tr><td>Shapoor Restaurant</td></tr>
+<tr><td>Chinese Corner</td></tr>
+<tr><td>Paninaro</td></tr>
+<tr><td>Modern Family Restaurant</td></tr>
+<tr><td>Bom Tasty Treat</td></tr>
+<tr><td>Meal Box Cafe</td></tr>
+<tr><td>Sarang Bandhu</td></tr>
+<tr><td>Shang Dynasty</td></tr>
+<tr><td>Big Daddy</td></tr>
+<tr><td>Local Bites</td></tr>
+<tr><td>Belstone Pure Veg</td></tr>
+<tr><td>Srinathji's</td></tr>
+<tr><td>Baskin Robbins</td></tr>
+<tr><td>Cafe Free India</td></tr>
+<tr><td>Great Punjab</td></tr>
+<tr><td>7 Spice Chinese Restaurant</td></tr>
+<tr><td>Punjabi Tadka By Crystal</td></tr>
+<tr><td>Chovisam Pizza</td></tr>
+<tr><td>Sheetal Restaurant</td></tr>
+<tr><td>Ambience</td></tr>
+<tr><td>Fly By Knight</td></tr>
+<tr><td>Zaffran</td></tr>
+<tr><td>Francesco's Pizzeria</td></tr>
+<tr><td>Status</td></tr>
+<tr><td>Hardeep Punjab</td></tr>
+<tr><td>Simply Delecious</td></tr>
+<tr><td>Creme House</td></tr>
+<tr><td>Delhi Zaika</td></tr>
+<tr><td>
+Executing - CurrentLocationGPSDisabledTest</td></tr>
+<tr><td>Following are the Restaurants in Elphinstone Flyover, Saidham Nagar, Lower Parel - </td></tr>
+<tr><td>Box8</td></tr>
+<tr><td>Malvani Katta</td></tr>
+<tr><td>Tibb's Frankie</td></tr>
+<tr><td>Modern Bar & Restaurant</td></tr>
+<tr><td>Smokin' Joe's</td></tr>
+<tr><td>Amazing China</td></tr>
+<tr><td>Hangla's</td></tr>
+<tr><td>Shapoor Restaurant</td></tr>
+<tr><td>Chinese Corner</td></tr>
+<tr><td>Paninaro</td></tr>
+<tr><td>Modern Family Restaurant</td></tr>
+<tr><td>Bom Tasty Treat</td></tr>
+<tr><td>Meal Box Cafe</td></tr>
+<tr><td>Sarang Bandhu</td></tr>
+<tr><td>Shang Dynasty</td></tr>
+<tr><td>Big Daddy</td></tr>
+<tr><td>Local Bites</td></tr>
+<tr><td>Belstone Pure Veg</td></tr>
+<tr><td>Srinathji's</td></tr>
+<tr><td>Baskin Robbins</td></tr>
+<tr><td>Cafe Free India</td></tr>
+<tr><td>Great Punjab</td></tr>
+<tr><td>7 Spice Chinese Restaurant</td></tr>
+<tr><td>Punjabi Tadka By Crystal</td></tr>
+<tr><td>Chovisam Pizza</td></tr>
+<tr><td>Sheetal Restaurant</td></tr>
+<tr><td>Ambience</td></tr>
+<tr><td>Fly By Knight</td></tr>
+<tr><td>Zaffran</td></tr>
+<tr><td>Francesco's Pizzeria</td></tr>
+<tr><td>Status</td></tr>
+<tr><td>Hardeep Punjab</td></tr>
+<tr><td>Simply Delecious</td></tr>
+<tr><td>Creme House</td></tr>
+<tr><td>Delhi Zaika</td></tr>
+<tr><td>
+Executing - SearchLocationManuallyGPSEnabledTest</td></tr>
+<tr><td>Following are the Restaurants in Dadar, Mumbai, Maharashtra, India - </td></tr>
+<tr><td>Fric N Floc</td></tr>
+<tr><td>Saibini Gomantak</td></tr>
+<tr><td>Chilli House</td></tr>
+<tr><td>Home Kitchen Company</td></tr>
+<tr><td>Shree Swami Samarth Fast Food</td></tr>
+<tr><td>Box8</td></tr>
+<tr><td>Light Of Bharat</td></tr>
+<tr><td>Saffron</td></tr>
+<tr><td>Tasty Sandwich And Pizza Corner</td></tr>
+<tr><td>Smokin' Joe's</td></tr>
+<tr><td>Munch</td></tr>
+<tr><td>Awadhpuri Hotel</td></tr>
+<tr><td>Sarang Bandhu</td></tr>
+<tr><td>Hotel Chandra Prakash</td></tr>
+<tr><td>The Baker's Dozen</td></tr>
+<tr><td>Hilton's</td></tr>
+<tr><td>Monginis</td></tr>
+<tr><td>Zelos N Zest</td></tr>
+<tr><td>Gold Rushs</td></tr>
+<tr><td>Potoba</td></tr>
+<tr><td>Hotel Sujay</td></tr>
+<tr><td>Paninaro</td></tr>
+<tr><td>Favourites</td></tr>
+<tr><td>Flavours</td></tr>
+<tr><td>Shree Krishna Veg Diet</td></tr>
+<tr><td>Japps</td></tr>
+<tr><td>Subway</td></tr>
+<tr><td>Ambretto</td></tr>
+<tr><td>Chaitanya</td></tr>
+<tr><td>Aroma</td></tr>
+<tr><td>Khans</td></tr>
+<tr><td>Icy Spicy Restaurant</td></tr>
+<tr><td>Big Daddy</td></tr>
+<tr><td>Anand Bhuwan The Dining Bar</td></tr>
+<tr><td>Chovisam Pizza</td></tr>
+<tr><td>Wok & Roll</td></tr>
+<tr><td>Srinathjis</td></tr>
+<tr><td>Sin City Cakes And Bakes</td></tr>
+<tr><td>Hotel Sheetal</td></tr>
+<tr><td>Aroma Lets Celebrate</td></tr>
+<tr><td>Home Deli</td></tr>
+<tr><td>Downtown Dhaba</td></tr>
+<tr><td>Hotel Omkar</td></tr>
+<tr><td>Foodish-The Happy Food</td></tr>
+<tr><td>Diva Maharashtracha</td></tr>
+<tr><td>Goa Portuguesa</td></tr>
+<tr><td>Dakshin Culture Curry</td></tr>
+<tr><td>Little China</td></tr>
+<tr><td>New Garam Masala</td></tr>
+<tr><td>Fly By Knight</td></tr>
+<tr><td>Ching - Ki - Shack</td></tr>
+<tr><td>Baskin Robbins</td></tr>
+<tr><td>China Bistro</td></tr>
+<tr><td>Sushegad Gomantak</td></tr>
+<tr><td>Stepiin Bar & Kitchen</td></tr>
+<tr><td>Baba Falooda</td></tr>
+<tr><td>Sneha Restaurant</td></tr>
+<tr><td>Hotel Malwan Kinara</td></tr>
+<tr><td>Howra</td></tr>
+<tr><td>Saffron 12</td></tr>
+<tr><td>Shiv Palace Restaurant And Bar</td></tr>
+<tr><td>I Love Food</td></tr>
+<tr><td>Lazeez Xpress</td></tr>
+<tr><td>Rasna Punjab</td></tr>
+<tr><td>Flavours Of China</td></tr>
+<tr><td>
+Executing - SearchLocationManuallyGPSEnabledTest</td></tr>
+<tr><td>Currently Not Active in Virar East, Virar, Maharashtra, India</td></tr>
+<tr><td>
+Executing - SearchLocationManuallyGPSDisabledTest</td></tr>
+<tr><td>Following are the Restaurants in Elphinstone College, Mumbai, Maharashtra, India - </td></tr>
+<tr><td>Oye Kake</td></tr>
+<tr><td>The Pantry Cafe'</td></tr>
+<tr><td>Mocambo Cafe</td></tr>
+<tr><td>Cafe Churchill</td></tr>
+<tr><td>Pratap Lunch Home</td></tr>
+<tr><td>Harish Refreshment</td></tr>
+<tr><td>H. Paramesha Fast Food Corner</td></tr>
+<tr><td>The Mumbai Masala</td></tr>
+<tr><td>7 Fresh</td></tr>
+<tr><td>Brijwasi Toast & Grill Corner</td></tr>
+<tr><td>Mao Family Restaurant</td></tr>
+<tr><td>Lalit Refreshments</td></tr>
+<tr><td>National Restaurant</td></tr>
+<tr><td>Lalit Refreshment-Taste Of Kerala</td></tr>
+<tr><td>6Th Street Yogurt</td></tr>
+<tr><td>Bombay Restaurant</td></tr>
+<tr><td>New Edward Bakery</td></tr>
+<tr><td>Edward Bakery</td></tr>
+<tr><td>Liberty Lunch Home</td></tr>
+<tr><td>Cafe Paris</td></tr>
+<tr><td>Shaan Chinese Corner</td></tr>
+<tr><td>Great Western Fast Food Corner</td></tr>
+<tr><td>210 Degrees</td></tr>
+<tr><td>Kya Miyaa!</td></tr>
+<tr><td>Pronto</td></tr>
+<tr><td>Sky Cafe</td></tr>
+<tr><td>Cafe Markiv's</td></tr>
+<tr><td>Big Daddy</td></tr>
+<tr><td>Mr. Chow's</td></tr>
+<tr><td>Delhi Darbar</td></tr>
+<tr><td>Jay Snacks</td></tr>
+<tr><td>Apna Fast Food Centre</td></tr>
+<tr><td>Leo's Boulangerie</td></tr>
+<tr><td>Kaisar E Hind</td></tr>
+<tr><td>Shri Ganesh Krupa Lunch Home</td></tr>
+<tr><td>Hindustan Restaurant</td></tr>
+<tr><td>Mezban</td></tr>
+<tr><td>Happiness Deli</td></tr>
+<tr><td>New Udipi Restaurant</td></tr>
+<tr><td>Baskin Robbins</td></tr>
+<tr><td>Paninaro</td></tr>
+<tr><td>Chikita</td></tr>
+<tr><td>Nanumal Bhojraj</td></tr>
+<tr><td>Aye Dios Mio</td></tr>
+<tr><td>Chhaya Restaurant</td></tr>
+<tr><td>Colaba Restaurant</td></tr>
+<tr><td>No 1 Roll</td></tr>
+<tr><td>Farhang Restaurant</td></tr>
+<tr><td>Shubh Sagar</td></tr>
+<tr><td>Sahibaan</td></tr>
+<tr><td>Leopold Cafe</td></tr>
+<tr><td>Delhi Mishtan Bhojnalaya</td></tr>
+<tr><td>Anubhav Bar And Restaurant</td></tr>
+<tr><td>Jimmy Boy</td></tr>
+<tr><td>Maharashtra Hotel</td></tr>
+<tr><td>Ayub's</td></tr>
+<tr><td>New Neelam Lunch Home</td></tr>
+<tr><td>Laxmi Vilas</td></tr>
+<tr><td>Subway</td></tr>
+<tr><td>Jaffer Bhai's Delhi Darbar</td></tr>
+<tr><td>Annaleela Modern Cafe</td></tr>
+<tr><td>Patel Restaurant</td></tr>
+<tr><td>Cafe Sundance</td></tr>
+<tr><td>Cafe Metro</td></tr>
+<tr><td>Cafe Firdos</td></tr>
+<tr><td>Fly By Knight</td></tr>
+<tr><td>Dwarka</td></tr>
+<tr><td>Femistic Chinese</td></tr>
+<tr><td>Cafe Excelsior</td></tr>
+<tr><td>Balgi Hotel</td></tr>
+<tr><td>Vithal's Family Restaurant And Bar</td></tr>
+<tr><td>Hind Chinese</td></tr>
+<tr><td>Pancharatna Restaurant</td></tr>
+<tr><td>Food Plaza</td></tr>
+<tr><td>Carter's Blue</td></tr>
+<tr><td>Sizzling China</td></tr>
+<tr><td>Mahesh Lunch Home</td></tr>
+<tr><td>Punjabi Moti Halwai</td></tr>
+<tr><td>Jai Jalaram Sweets & Fast Food</td></tr>
+<tr><td>Spices & Flavours</td></tr>
+<tr><td>For Heavens Cakes</td></tr>
+<tr><td>Imbiss</td></tr>
+<tr><td>Choco Mania</td></tr>
+<tr><td>Gary's</td></tr>
+<tr><td>Usmaniya Hotel</td></tr>
+<tr><td>Patil Juice Center</td></tr>
+<tr><td>Dark Temptations</td></tr>
+<tr><td>Kurry Club</td></tr>
+<tr><td>Smokin' Joe's</td></tr>
+<tr><td>Pejas Pure Veg Restaurant</td></tr>
+<tr><td>Sudha Fast Food</td></tr>
+<tr><td>Babulnath Dosa Center</td></tr>
+<tr><td>Aakash Sagar</td></tr>
+<tr><td>Apsara Ice Creams</td></tr>
+<tr><td>Delhi Zaika</td></tr>
+<tr><td>Hotel Suprabhat & Satkar Fast Food</td></tr>
+</table>
