--- a/tinyowl/test-output/old/tinyOwlLocationTests/toc.html
+++ b/tinyowl/test-output/old/tinyOwlLocationTests/toc.html
@@ -20,41 +20,41 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-skipped'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>TC_01 - Current Location when GPS is enabled (0/0/1)</td><td valign='top' align='right'>
-  <a href='TC_01 - Current Location when GPS is enabled.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>TC_02 - Current Location when GPS is initially disabled (0/0/1)</td><td valign='top' align='right'>
-  <a href='TC_02 - Current Location when GPS is initially disabled.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>TC_03 - Search a valid(in scope) Location manually when GPS is enabled (0/0/1)</td><td valign='top' align='right'>
-  <a href='TC_03 - Search a valid(in scope) Location manually when GPS is enabled.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-skipped'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>TC_04 - Search an invalid(out of scope) Location manually when GPS is enabled (0/0/1)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>TC_04 - Search an invalid(out of scope) Location manually when GPS is enabled (0/1/0)</td><td valign='top' align='right'>
   <a href='TC_04 - Search an invalid(out of scope) Location manually when GPS is enabled.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-skipped'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>TC_05 - Search a valid(in scope) Location manually when GPS is initially disabled (0/0/1)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>TC_01 - Current Location when GPS is enabled (1/0/0)</td><td valign='top' align='right'>
+  <a href='TC_01 - Current Location when GPS is enabled.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TC_02 - Current Location when GPS is initially disabled (1/0/0)</td><td valign='top' align='right'>
+  <a href='TC_02 - Current Location when GPS is initially disabled.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TC_03 - Search a valid(in scope) Location manually when GPS is enabled (1/0/0)</td><td valign='top' align='right'>
+  <a href='TC_03 - Search a valid(in scope) Location manually when GPS is enabled.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>TC_05 - Search a valid(in scope) Location manually when GPS is initially disabled (1/0/0)</td><td valign='top' align='right'>
   <a href='TC_05 - Search a valid(in scope) Location manually when GPS is initially disabled.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
